[metadata]
name = yt
version = 4.2.dev0
description = An analysis and visualization toolkit for volumetric data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yt-project/yt
author = The yt project
author_email = yt-dev@python.org
license = BSD 3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization
keywords = astronomy astrophysics visualization amr adaptivemeshrefinement
project_urls =
    Homepage=https://yt-project.org/
    Documentation=https://yt-project.org/doc/
    Source=https://github.com/yt-project/yt/
    Tracker=https://github.com/yt-project/yt/issues

[options]
packages = find:
install_requires =
    cmyt>=1.1.2
    ipywidgets>=8.0.0
    matplotlib!=3.4.2,>=3.2  # keep in sync with tests/windows_conda_requirements.txt
    more-itertools>=8.4
    numpy>=1.17.5
    packaging>=20.9
    pillow>=6.2.1 # transitive dependency via MPL (>=3.3)
    pyparsing>=2.0.3  # transitive dependency via packaging and MPL
    tomli-w>=0.4.0
    tqdm>=3.4.0
    unyt>=2.9.2,<3.0 # see https://github.com/yt-project/yt/issues/4162
    tomli>=1.2.3;python_version < '3.11'
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    yt = yt.utilities.command_line:run_main
nose.plugins.0.10 =
    answer-testing = yt.utilities.answer_testing.framework:AnswerTesting

[options.extras_require]
doc =
    alabaster
    bottle
    jinja2<3.1.0  # see https://github.com/readthedocs/readthedocs.org/issues/9037
    jupyter-client<7.0
    nbconvert==5.6.1
    pyx>=0.15
    regions>=0.7
    runnotebook
    scipy<=1.7.1  # see https://github.com/yt-project/yt/issues/3966 and https://github.com/scipy/scipy/issues/16602
    sphinx==3.1.2
    sphinx-bootstrap-theme
    sphinx-rtd-theme
full =
    arm-pyart!=1.12.5,>=1.11.4
    astropy>=4.0.1,<6.0.0
    f90nml>=1.1.2
    firefly>=3.2.0,<4.0.0
    glueviz>=0.13.3
    h5py>=3.1.0,<4.0.0
    ipython>=2.0.0
    libconf>=1.0.1
    miniballcpp>=0.2.1
    mpi4py>=3.0.3
    netCDF4!=1.6.1,>=1.5.3 # see https://github.com/Unidata/netcdf4-python/issues/1192
    pandas>=1.1.2
    pooch>=0.7.0
    pyaml>=17.10.0
    pykdtree>=1.3.1
    pyqt5>=5.15.2
    pyx>=0.15
    requests>=2.20.0
    scipy>=1.5.0
    xarray>=0.16.1
    glue-core!=1.2.4;python_version >= '3.10' # see https://github.com/glue-viz/glue/issues/2263
    ratarmount~=0.8.1;platform_system!='Windows' and platform_system!='Darwin'
mapserver =
    bottle
minimal =
    cmyt==1.1.2
    ipywidgets==8.0.0
    matplotlib==3.2
    more-itertools==8.4
    numpy==1.17.5
    packaging==20.9
    pillow==6.2.1
    pyparsing==2.0.3
    tomli-w==0.4.0
    tqdm==3.4.0
    unyt==2.9.2
    tomli==1.2.3;python_version < '3.11'
test =
    nose~=1.3.7
    nose-exclude
    nose-timer~=1.0.0
    pyaml>=17.10.0
    pytest>=6.1
    sympy!=1.10,!=1.9 # see https://github.com/sympy/sympy/issues/22241
typecheck =
    mypy==0.991
    types-PyYAML==6.0.12.2
    types-chardet==5.0.4
    types-requests==2.28.11.5
    types-setuptools==65.6.0.1

[flake8]
max-line-length = 88
exclude = doc,
    benchmarks,
    */api.py,                          # avoid spurious "unused import"
    */__init__.py,                     # avoid spurious "unused import"
    */__config__.py,                   # autogenerated
    yt/units,                          # wrapper around unyt, avoid spurious "unused import"
    yt/frontends/stream/sample_data,   # autogenerated
    yt/visualization/_mpl_imports.py,
    yt/utilities/fits_image.py,
    yt/utilities/lodgeit.py,
    yt/mods.py,
    yt/visualization/_colormap_data.py,
ignore =
    E203,
    E266,
    E302,
    E501,
    E741,
    W503,
enable-extensions = G  # flake8-logging-format (extension is disabled by default)
extend-select =
    B902,
    B904,
jobs = 8
